--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,5 @@
 
 @import "bootstrap";
 
-@import "poke-wiki.scss";
-@import "spinner.scss";
+// @import "poke-wiki.scss";
+// @import "spinner.scss";
