--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -28,7 +28,7 @@
   --poison-light: #d898d6;
   --ground-light: #f0dfb2;
   --flying-light: #d4c7f9;
-  --psychic-light: ##fcaac3;
+  --psychic-light: #fcaac3;
   --bug-light: #dfed7c;
   --rock-light: #e0d395;
   --ghost-light: #b9a9cd;
