--- a/app/assets/stylesheets/poke-wiki.scss
+++ b/app/assets/stylesheets/poke-wiki.scss
@@ -233,6 +233,14 @@ body {
   }
 }
 
+.evolution-chain * {
+  text-transform: capitalize;
+}
+
+.current-evolution {
+  font-weight: 800;
+}
+
 @media (min-width: 576px) {
   .main-pokedex {
     height: calc(100vh - 83px);
