--- a/app/assets/stylesheets/poke-wiki.scss
+++ b/app/assets/stylesheets/poke-wiki.scss
@@ -32,7 +32,7 @@ body {
     height: 18px;
     border-radius: 50%;
     border: solid 1px #000;
-    box-shadow: inset 0 0 0 2px hsl(268, 100%, 75%);
+    box-shadow: inset 0 0 2px 2px #bb80ff, 0 0 5px 2px #ffaaff;
   }
 
   .button-2 {
@@ -41,7 +41,7 @@ body {
     height: 18px;
     border-radius: 50%;
     border: solid 1px #000;
-    box-shadow: inset 0 0 0 2px #bb80ff;
+    box-shadow: inset 0 0 2px 2px #bb80ff, 0 0 5px 2px #ffde00;
     margin-left: 12px;
   }
 
@@ -51,7 +51,7 @@ body {
     height: 18px;
     border-radius: 50%;
     border: solid 1px #000;
-    box-shadow: inset 0 0 0 2px #bb80ff;
+    box-shadow: inset 0 0 2px 2px #bb80ff, 0 0 5px 2px #66ff66;
     margin-left: 12px;
   }
 }
